Fixed font family on iphone

--- a/anett-kutyaiskolaja/src/app/app.component.css
+++ b/anett-kutyaiskolaja/src/app/app.component.css
@@ -7,7 +7,7 @@ header {
     background-color: #1e7a8e;
     box-shadow: 1px 1px 30px 0px black;
     color: #ec9a29;
-    font-family: cursive;
+    font-family: Comic Sans MS, Comic Sans, cursive;
     font-size: .9em;
     text-shadow: 1px 1px black;
     position: relative;
